add admin route
